--- a/details/reply.css
+++ b/details/reply.css
@@ -10,7 +10,7 @@
   .reply-section-title {
     font-size:1.2em;
     font-weight: weight;
-    margin:1em 2em;
+    margin:1em .5em;
   }
 
   /* 댓글 카드 시작 */
