--- a/details/section.css
+++ b/details/section.css
@@ -27,10 +27,12 @@
     display:flex;
     flex-direction: row;
     height:21rem;
-    margin:1em;
+    margin: 5em 1em;
 }
 
 .mainpage  {
+    position:relative;
+    top:5rem;
     display:flex;
     width:100%;
     flex-direction:column;
