--- a/details/details.css
+++ b/details/details.css
@@ -587,27 +587,7 @@
     }
   }
 /* -----------------------------------------------------------------*/
-  /* 컨테이너 내부 row 시작*/
-  .row {
-    display:flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    flex-grow: 1;
-    width: 92%;
-  }
-
-  .row_wrapper {
-    width:100%;
-  }
   
-  .row-card {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-grow: 1;
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
-  }
 
   .no-gutters {
     margin-right: 1rem;
@@ -638,6 +618,10 @@
     display:inline-flex;
     padding:2em 0;
   }
+  .commentbox > input {
+    font-size: 2vw;
+  }
+
 
   input[name="comment"] {
     border: 1px solid #2d4373;
@@ -659,26 +643,7 @@
 
   /* 이게 컨테이너의 전체 레이아웃을 해칠 수 있는 핵심 셀렉터 */
   /* 그러나 커스텀 후에는 상단 바만 결정함 */
-  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col,
-  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm,
-  .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md,
-  .col-md-auto, .col-xl-4, .col-lg-5, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg,
-  .col-lg-auto, .col-xl-1, .col-xl-2,  .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl,
-  .col-xl-auto {
-    position: relative;
-    width: 16rem;
-    height: 8rem;
-    padding-left: 0.5rem;
-  }
-
-  .col-xl-3 {
-    position: relative;
-    width: 16rem;
-    height: 8rem;
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
-  }
-
+  
   .col-auto {
     max-width: fit-content;
   }
@@ -1276,11 +1241,11 @@
     .col-lg-5 {
       flex: 0 0 41.66667%;
       max-width: 41.66667%;
-    }
+    } /*
     .col-lg-6 {
       flex: 0 0 50%;
       max-width: 50%;
-    }
+    } */
     .col-lg-7 {
       flex: 0 0 58.33333%;
       max-width: 58.33333%;
