--- a/details/widget.css
+++ b/details/widget.css
@@ -9,7 +9,7 @@
     margin:1em;
 }
 
-@media screen and (max-width:1000px) {
+@media screen and (max-width:1100px) {
     .section-second {
         display: grid;
         grid-template-columns: 1fr;
@@ -17,8 +17,8 @@
     .pie-chart
     {
         position: relative;
-        margin: 0 1rem;
-        width: 24rem;
+        margin: .5rem 0;
+        width: 87vw;
         top: 0.2rem;
     }
     .pie-chart-wrapper {
